--- a/public/src/index.html
+++ b/public/src/index.html
@@ -14,10 +14,7 @@
     />
     <link rel="canonical" href="https://www.louisyoung.co.uk" />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:site_name"
-      content="Web Developer - Bespoke Website Development | Louis Young"
-    />
+    <meta property="og:site_name" content="Web Developer - Bespoke Website Development | Louis Young" />
     <meta property="og:title" content="Louis Young - Web Developer" />
     <meta property="og:url" content="https://www.louisyoung.co.uk" />
     <meta
@@ -41,25 +38,14 @@
     />
     <!-- SEO end. -->
     <!-- Favicon start. -->
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="./assets/images/favicons/favicon.ico?v=1.1.0"
-    />
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicons/favicon.ico?v=1.1.0" />
     <!-- Favicon end. -->
     <!-- Stylesheets start. -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <link
-      rel="stylesheet"
-      href="./stylesheets/main.min.css?v=1.0.0"
-      type="text/css"
-    />
+    <link rel="stylesheet" href="./stylesheets/main.min.css?v=1.0.0" type="text/css" />
     <!-- Stylesheets end. -->
     <!-- Google Analytics start. -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-7R7W0LRLJ1"
-    ></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7R7W0LRLJ1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -127,17 +113,11 @@
               /></a>
             </li> -->
           </ul>
-          <a
-            href="#contact"
-            class="header__button header__button--small header__link button"
-            >Contact</a
-          >
+          <a href="#contact" class="header__button header__button--small header__link button">Contact</a>
         </nav>
 
         <div class="header__item header__item--right">
-          <a href="#contact" class="header__button header__button--large button"
-            >Contact</a
-          >
+          <a href="#contact" class="header__button header__button--large button">Contact</a>
         </div>
       </div>
     </header>
@@ -145,22 +125,13 @@
     <div class="underlay"></div>
 
     <main class="background">
-      <section
-        class="introduction container"
-        data-aos="fade-up"
-        data-aos-duration="2000"
-      >
+      <section class="introduction container" data-aos="fade-up" data-aos-duration="2000">
         <article class="introduction__content">
           <h1 class="introduction__title">Web Developer</h1>
 
           <p class="introduction__content">
-            Currently creating fast, responsive, accessible and secure websites
-            and applications at
-            <a
-              href="//fluidstudiosltd.com"
-              target="_blank"
-              rel="noopener nofollow noreferrer"
-              class="link"
+            Currently creating fast, responsive, accessible and secure websites and applications at
+            <a href="//fluidstudiosltd.com" target="_blank" rel="noopener nofollow noreferrer" class="link"
               >Fluid Studios</a
             >
             to help benefit businesses.
@@ -180,12 +151,7 @@
 
       <hr class="separator" />
 
-      <section
-        class="skills section"
-        data-aos="fade-up"
-        data-aos-duration="2000"
-        data-aos-delay="250"
-      >
+      <section class="skills section" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="250">
         <article class="skills__inner container">
           <h2 class="skills__title">Expertise</h2>
 
@@ -193,36 +159,32 @@
             <article class="skill">
               <h3 class="skill__title">Development</h3>
               <p class="skill__text">
-                With years of industry experience under my belt, I'm well versed
-                in developing fast, responsive, secure and successful websites
-                using a multitude of technologies and tools.
+                With years of industry experience under my belt, I'm well versed in developing fast, responsive, secure
+                and successful websites using a multitude of technologies and tools.
               </p>
             </article>
 
             <article class="skill">
               <h3 class="skill__title">User Interface</h3>
               <p class="skill__text">
-                Having worked with different teams and designers, I can
-                communicate constructive feedback and ensure optimal end results
-                for clients.
+                Having worked with different teams and designers, I can communicate constructive feedback and ensure
+                optimal end results for clients.
               </p>
             </article>
 
             <article class="skill">
               <h3 class="skill__title">Search Engine Optimisation</h3>
               <p class="skill__text">
-                With great understanding of technical on-page SEO, I have the
-                tools and knowledge to enable a website to rank well and
-                generate the business that it should.
+                With great understanding of technical on-page SEO, I have the tools and knowledge to enable a website to
+                rank well and generate the business that it should.
               </p>
             </article>
 
             <article class="skill">
               <h3 class="skill__title">User Experience</h3>
               <p class="skill__text">
-                Having worked on and built a plethora of websites, I know what
-                works and what doesn't for users, and therefore businesses, and
-                can spot issues in advance.
+                Having worked on and built a plethora of websites, I know what works and what doesn't for users, and
+                therefore businesses, and can spot issues in advance.
               </p>
             </article>
           </div>
@@ -233,41 +195,19 @@
 
       <hr class="separator" />
 
-      <section
-        class="projects section container"
-        data-aos="fade-up"
-        data-aos-duration="2000"
-        data-aos-delay="500"
-      >
+      <section class="projects section container" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="500">
         <figure class="project">
           <a
-            href="//staging.fluidstudiosltd.com"
+            href="//app.louisyoung.co.uk/keyword-density-tool"
             class="project__link"
             target="_blank"
             rel="noopener nofollow noreferrer"
           >
             <img
               loading="lazy"
-              src="./assets/images/projects/fluid-studios.jpg"
-              alt="Full Stack Web Development Project"
-              title="Full-stack Web Development Project"
-              class="project__preview"
-            />
-          </a>
-        </figure>
-
-        <figure class="project">
-          <a
-            href="//promedica24.co.uk"
-            class="project__link"
-            target="_blank"
-            rel="noopener nofollow noreferrer"
-          >
-            <img
-              loading="lazy"
-              src="./assets/images/projects/promedica.jpg"
-              alt="Front End Web Development Project"
-              title="Front-end Web Development Project"
+              src="./assets/images/projects/keyword-density-tool.jpg"
+              alt="Keyword Density Analyser Application"
+              title="Keyword Density Tool React Application"
               class="project__preview"
             />
           </a>
@@ -283,8 +223,8 @@
             <img
               loading="lazy"
               src="./assets/images/projects/word-counter.jpg"
-              alt="Word Counter React Web Application"
-              title="React.js Application"
+              alt="Word Counter React Application"
+              title="Word Counter React Application"
               class="project__preview"
             />
           </a>
@@ -292,15 +232,27 @@
 
         <figure class="project">
           <a
-            href="//www.esa-retail.co.uk"
+            href="//staging.fluidstudiosltd.com"
             class="project__link"
             target="_blank"
             rel="noopener nofollow noreferrer"
           >
             <img
               loading="lazy"
-              src="./assets/images/projects/esa-retail.jpg"
-              alt="Bespoke Website Development Project"
+              src="./assets/images/projects/fluid-studios.jpg"
+              alt="Full-stack Web Development Project"
+              title="Full-stack Web Development Project"
+              class="project__preview"
+            />
+          </a>
+        </figure>
+
+        <figure class="project">
+          <a href="//promedica24.co.uk" class="project__link" target="_blank" rel="noopener nofollow noreferrer">
+            <img
+              loading="lazy"
+              src="./assets/images/projects/promedica.jpg"
+              alt="Bespoke Web Development Project"
               title="Bespoke Web Development Project"
               class="project__preview"
             />
@@ -312,12 +264,7 @@
 
       <hr class="separator" />
 
-      <section
-        class="content section container"
-        data-aos="fade-up"
-        data-aos-duration="2000"
-        data-aos-delay="250"
-      >
+      <section class="content section container" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="250">
         <figure>
           <img
             src="./assets/images/illustrations/website-developer-experience.svg"
@@ -332,19 +279,15 @@
           <h2 class="content__title">Technologies</h2>
 
           <p class="content__text">
-            I specialise in creating performant, responsive, secure and
-            accessible websites and applications.
+            I specialise in creating performant, responsive, secure and accessible websites and applications.
           </p>
 
           <p class="content__text">
-            I am a fast and keen learner and can take new technologies and
-            methodologies on board quickly and efficiently.
+            I am a fast and keen learner and can take new technologies and methodologies on board quickly and
+            efficiently.
           </p>
 
-          <p class="content__text">
-            Technologies I'm comfortable working with include but are not
-            limited to:
-          </p>
+          <p class="content__text">Technologies I'm comfortable working with include but are not limited to:</p>
           <ul class="pills">
             <li class="pill">HTML5</li>
             <li class="pill">CSS3</li>
@@ -368,9 +311,7 @@
             <li class="pill">Webpack</li>
             <li class="pill">CMSs</li>
           </ul>
-          <p class="content__text">
-            and I have the ability to quickly learn others.
-          </p>
+          <p class="content__text">and I have the ability to quickly learn others.</p>
         </article>
       </section>
 
@@ -394,9 +335,8 @@
           <h2 class="content__title">Experience</h2>
 
           <p class="content__text">
-            I have experience working as an industry professional and I am an
-            excellent communicator having worked in both small and large teams
-            with knowledge of:
+            I have experience working as an industry professional and I am an excellent communicator having worked in
+            both small and large teams with knowledge of:
           </p>
           <ul class="pills">
             <li class="pill">Windows</li>
@@ -431,54 +371,30 @@
 
       <hr class="separator" />
 
-      <section
-        class="contact container section"
-        data-aos="fade-up"
-        data-aos-duration="2000"
-        data-aos-delay="500"
-      >
+      <section class="contact container section" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="500">
         <article>
           <h2 class="contact__title">Let's talk</h2>
 
           <p class="contact__text">
-            If you have an idea for a project or you just want to have a chat,
-            please feel free to get in touch with me to see how I can help.
+            If you have an idea for a project or you just want to have a chat, please feel free to get in touch with me
+            to see how I can help.
           </p>
 
           <p class="contact__text">
-            I'm always open to great new opportunities, so if you would like to
-            find about more about me in a professional capacity, please get in
-            touch via any of the methods on my website.
+            I'm always open to great new opportunities, so if you would like to find about more about me in a
+            professional capacity, please get in touch via any of the methods on my website.
           </p>
 
           <p class="contact__text">
             Alternatively, send me an email at
-            <a href="mailto:me@louisyoung.co.uk?subject=Website" class="link"
-              >me@louisyoung.co.uk</a
-            >.
+            <a href="mailto:me@louisyoung.co.uk?subject=Website" class="link">me@louisyoung.co.uk</a>.
           </p>
         </article>
 
         <form action="#!" class="form">
-          <input
-            type="text"
-            name="name"
-            placeholder="Name"
-            class="form__input"
-            required
-          />
-          <input
-            type="email"
-            name="email"
-            placeholder="Email"
-            class="form__input"
-            required
-          />
-          <textarea
-            name="enquiry"
-            class="form__input form__input--text"
-            placeholder="Enquiry"
-          ></textarea>
+          <input type="text" name="name" placeholder="Name" class="form__input" required />
+          <input type="email" name="email" placeholder="Email" class="form__input" required />
+          <textarea name="enquiry" class="form__input form__input--text" placeholder="Enquiry"></textarea>
 
           <button class="form__submit button" type="submit">Send</button>
         </form>
@@ -493,10 +409,7 @@
         >
 
         <nav class="socials">
-          <a
-            href="//github.com/louis-young"
-            target="_blank"
-            rel="noopener nofollow noreferrer"
+          <a href="//github.com/louis-young" target="_blank" rel="noopener nofollow noreferrer"
             ><img
               src="./assets/images/icons/socials/github.svg"
               alt="Github"
@@ -504,10 +417,7 @@
               class="socials__icon"
               loading="lazy"
           /></a>
-          <a
-            href="//linkedin.com/in/louis-r-young"
-            target="_blank"
-            rel="noopener nofollow noreferrer"
+          <a href="//linkedin.com/in/louis-r-young" target="_blank" rel="noopener nofollow noreferrer"
             ><img
               src="./assets/images/icons/socials/linkedin.svg"
               alt="LinkedIn"
@@ -520,26 +430,10 @@
     </footer>
 
     <aside class="switch">
-      <label
-        for="light"
-        class="switch__label switch__label--light switch__label--active"
-        >Light</label
-      >
-      <input
-        type="radio"
-        name="theme"
-        class="switch__input"
-        id="light"
-        data-theme="light"
-      />
+      <label for="light" class="switch__label switch__label--light switch__label--active">Light</label>
+      <input type="radio" name="theme" class="switch__input" id="light" data-theme="light" />
       <label for="dark" class="switch__label switch__label--dark">Dark</label>
-      <input
-        type="radio"
-        name="theme"
-        class="switch__input"
-        id="dark"
-        data-theme="dark"
-      />
+      <input type="radio" name="theme" class="switch__input" id="dark" data-theme="dark" />
     </aside>
 
     <section class="fallback">
@@ -551,45 +445,20 @@
           >
         </figure>
 
-        <p class="fallback__text">
-          You are currently using an outdated browser.
-        </p>
-        <p class="fallback__text">
-          Please consider using a modern browser such as one listed below:
-        </p>
+        <p class="fallback__text">You are currently using an outdated browser.</p>
+        <p class="fallback__text">Please consider using a modern browser such as one listed below:</p>
 
         <div class="browsers">
-          <a
-            href="//www.google.com/chrome/"
-            target="_blank"
-            rel="noopener"
-            class="browser"
-          >
-            <img
-              src="./assets/images/icons/browsers/chrome.svg"
-              alt="Google Chrome"
-            />
+          <a href="//www.google.com/chrome/" target="_blank" rel="noopener" class="browser">
+            <img src="./assets/images/icons/browsers/chrome.svg" alt="Google Chrome" />
             <p class="browser__title">Google Chrome</p>
           </a>
-          <a
-            href="//www.opera.com/download"
-            target="_blank"
-            rel="noopener"
-            class="browser"
-          >
+          <a href="//www.opera.com/download" target="_blank" rel="noopener" class="browser">
             <img src="./assets/images/icons/browsers/opera.svg" alt="Opera" />
             <p class="browser__title">Opera</p>
           </a>
-          <a
-            href="//www.mozilla.org/en-GB/firefox/new/"
-            target="_blank"
-            rel="noopener"
-            class="browser"
-          >
-            <img
-              src="./assets/images/icons/browsers/firefox.svg"
-              alt="Mozilla Firefox"
-            />
+          <a href="//www.mozilla.org/en-GB/firefox/new/" target="_blank" rel="noopener" class="browser">
+            <img src="./assets/images/icons/browsers/firefox.svg" alt="Mozilla Firefox" />
             <p class="browser__title">Mozilla Firefox</p>
           </a>
         </div>
