--- a/public/src/index.html
+++ b/public/src/index.html
@@ -215,6 +215,23 @@
 
         <figure class="project">
           <a
+            href="//app.louisyoung.co.uk/task-manager"
+            class="project__link"
+            target="_blank"
+            rel="noopener nofollow noreferrer"
+          >
+            <img
+              loading="lazy"
+              src="./assets/images/projects/task-manager.jpg"
+              alt="Task Manager React Application"
+              title="Task Manager React Application"
+              class="project__preview"
+            />
+          </a>
+        </figure>
+
+        <figure class="project">
+          <a
             href="//app.louisyoung.co.uk/word-counter"
             class="project__link"
             target="_blank"
@@ -242,18 +259,6 @@
               src="./assets/images/projects/fluid-studios.jpg"
               alt="Full-stack Web Development Project"
               title="Full-stack Web Development Project"
-              class="project__preview"
-            />
-          </a>
-        </figure>
-
-        <figure class="project">
-          <a href="//promedica24.co.uk" class="project__link" target="_blank" rel="noopener nofollow noreferrer">
-            <img
-              loading="lazy"
-              src="./assets/images/projects/promedica.jpg"
-              alt="Bespoke Web Development Project"
-              title="Bespoke Web Development Project"
               class="project__preview"
             />
           </a>
