--- a/public/src/index.html
+++ b/public/src/index.html
@@ -130,7 +130,7 @@
           <h1 class="introduction__title">Web Developer</h1>
 
           <p class="introduction__content">
-            Currently creating fast, responsive, accessible and secure websites and applications at
+            I'm currently creating fast, responsive, accessible and secure websites and applications at
             <a href="//fluidstudiosltd.com" target="_blank" rel="noopener nofollow noreferrer" class="link"
               >Fluid Studios</a
             >
@@ -159,32 +159,32 @@
             <article class="skill">
               <h3 class="skill__title">Development</h3>
               <p class="skill__text">
-                With years of industry experience under my belt, I'm well versed in developing fast, responsive, secure
-                and successful websites using a multitude of technologies and tools.
+                With plenty of industry experience under my belt, I'm well versed in developing fast, responsive, secure
+                and successful websites using a multitude of tools and technologies.
               </p>
             </article>
 
             <article class="skill">
               <h3 class="skill__title">User Interface</h3>
               <p class="skill__text">
-                Having worked with different teams and designers, I can communicate constructive feedback and ensure
-                optimal end results for clients.
+                Having worked within teams and with different designers, I can communicate constructive feedback and
+                ensure optimal end results.
               </p>
             </article>
 
             <article class="skill">
               <h3 class="skill__title">Search Engine Optimisation</h3>
               <p class="skill__text">
-                With great understanding of technical on-page SEO, I have the tools and knowledge to enable a website to
-                rank well and generate the business that it should.
+                With a great understanding of technical on-page SEO, I have the skills and knowledge to enable a website
+                to rank well and generate the business that it should.
               </p>
             </article>
 
             <article class="skill">
               <h3 class="skill__title">User Experience</h3>
               <p class="skill__text">
-                Having worked on and built a plethora of websites, I know what works and what doesn't for users, and
-                therefore businesses, and can spot issues in advance.
+                Having worked on and built a multitude of websites and applications, I am aware of what works and what
+                doesn't for users and I can spot issues in advance.
               </p>
             </article>
           </div>
@@ -195,7 +195,7 @@
 
       <hr class="separator" />
 
-      <section class="projects section container" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="500">
+      <section class="projects section container" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="250">
         <figure class="project">
           <a
             href="//app.louisyoung.co.uk/keyword-density-tool"
@@ -232,23 +232,6 @@
 
         <figure class="project">
           <a
-            href="//app.louisyoung.co.uk/word-counter"
-            class="project__link"
-            target="_blank"
-            rel="noopener nofollow noreferrer"
-          >
-            <img
-              loading="lazy"
-              src="./assets/images/projects/word-counter.jpg"
-              alt="Word Counter React Application"
-              title="Word Counter React Application"
-              class="project__preview"
-            />
-          </a>
-        </figure>
-
-        <figure class="project">
-          <a
             href="//staging.fluidstudiosltd.com"
             class="project__link"
             target="_blank"
@@ -259,6 +242,23 @@
               src="./assets/images/projects/fluid-studios.jpg"
               alt="Full-stack Web Development Project"
               title="Full-stack Web Development Project"
+              class="project__preview"
+            />
+          </a>
+        </figure>
+
+        <figure class="project">
+          <a
+            href="//app.louisyoung.co.uk/word-counter"
+            class="project__link"
+            target="_blank"
+            rel="noopener nofollow noreferrer"
+          >
+            <img
+              loading="lazy"
+              src="./assets/images/projects/word-counter.jpg"
+              alt="Word Counter React Application"
+              title="Word Counter React Application"
               class="project__preview"
             />
           </a>
@@ -284,10 +284,6 @@
           <h2 class="content__title">Technologies</h2>
 
           <p class="content__text">
-            I specialise in creating performant, responsive, secure and accessible websites and applications.
-          </p>
-
-          <p class="content__text">
             I am a fast and keen learner and can take new technologies and methodologies on board quickly and
             efficiently.
           </p>
@@ -303,10 +299,9 @@
             <li class="pill">Next</li>
             <li class="pill">Node</li>
             <li class="pill">Express</li>
-            <li class="pill">MongoDB</li>
+            <li class="pill">Mongoose</li>
             <li class="pill">PHP</li>
             <li class="pill">MySQL</li>
-            <li class="pill">Apache</li>
             <li class="pill">Docker</li>
             <li class="pill">JSON</li>
             <li class="pill">Schema</li>
@@ -340,8 +335,8 @@
           <h2 class="content__title">Experience</h2>
 
           <p class="content__text">
-            I have experience working as an industry professional and I am an excellent communicator having worked in
-            both small and large teams with knowledge of:
+            I have experience working as an industry professional and I am an excellent communicator having worked
+            within different teams with knowledge of:
           </p>
           <ul class="pills">
             <li class="pill">Windows</li>
@@ -361,7 +356,6 @@
             <li class="pill">Optimisation</li>
             <li class="pill">SSLs</li>
             <li class="pill">VPSs</li>
-            <li class="pill">Dedicated Servers</li>
             <li class="pill">UI / UX</li>
             <li class="pill">Technical SEO</li>
             <li class="pill">Analytics</li>
@@ -386,8 +380,8 @@
           </p>
 
           <p class="contact__text">
-            I'm always open to great new opportunities, so if you would like to find about more about me in a
-            professional capacity, please get in touch via any of the methods on my website.
+            I'm always open to great new opportunities; if you would like to find about more about me in a professional
+            capacity, please get in touch via any of the methods on my website.
           </p>
 
           <p class="contact__text">
@@ -396,7 +390,7 @@
           </p>
         </article>
 
-        <form action="#!" class="form">
+        <form class="form">
           <input type="text" name="name" placeholder="Name" class="form__input" required />
           <input type="email" name="email" placeholder="Email" class="form__input" required />
           <textarea name="enquiry" class="form__input form__input--text" placeholder="Enquiry"></textarea>
