--- a/public/src/index.html
+++ b/public/src/index.html
@@ -99,19 +99,6 @@
             <li class="navigation__item">
               <a href="#about" class="navigation__link header__link">About</a>
             </li>
-            <!-- <li class="navigation__item">
-              <a
-                href="/web-development-blog"
-                class="navigation__link navigation__link--icon header__link"
-                target="_blank"
-                rel="noopener"
-                >Blog
-                <img
-                  src="./assets/images/icons/menu/external.svg"
-                  alt="Open"
-                  class="navigation__icon"
-              /></a>
-            </li> -->
           </ul>
           <a href="#contact" class="header__button header__button--small header__link button">Contact</a>
         </nav>
@@ -290,8 +277,8 @@
 
           <p class="content__text">Technologies I'm comfortable working with include but are not limited to:</p>
           <ul class="pills">
-            <li class="pill">HTML5</li>
-            <li class="pill">CSS3</li>
+            <li class="pill">HTML</li>
+            <li class="pill">CSS</li>
             <li class="pill">Sass</li>
             <li class="pill">BEM</li>
             <li class="pill">JavaScript</li>
@@ -299,7 +286,7 @@
             <li class="pill">Next</li>
             <li class="pill">Node</li>
             <li class="pill">Express</li>
-            <li class="pill">Mongoose</li>
+            <li class="pill">MongoDB</li>
             <li class="pill">PHP</li>
             <li class="pill">MySQL</li>
             <li class="pill">Docker</li>
