--- a/public/src/errors/error.html
+++ b/public/src/errors/error.html
@@ -14,10 +14,7 @@
     />
     <link rel="canonical" href="https://www.louisyoung.co.uk" />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:site_name"
-      content="Web Developer - Bespoke Website Development | Louis Young"
-    />
+    <meta property="og:site_name" content="Web Developer - Bespoke Website Development | Louis Young" />
     <meta property="og:title" content="Louis Young - Web Developer" />
     <meta property="og:url" content="https://www.louisyoung.co.uk" />
     <meta
@@ -41,25 +38,14 @@
     />
     <!-- SEO end. -->
     <!-- Favicon start. -->
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="./assets/images/favicons/favicon.ico?v=1.1.0"
-    />
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicons/favicon.ico?v=1.1.0" />
     <!-- Favicon end. -->
     <!-- Stylesheets start. -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <link
-      rel="stylesheet"
-      href="./stylesheets/main.min.css?v=1.0.0"
-      type="text/css"
-    />
+    <link rel="stylesheet" href="./stylesheets/main.min.css?v=1.0.0" type="text/css" />
     <!-- Stylesheets end. -->
     <!-- Google Analytics start. -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-7R7W0LRLJ1"
-    ></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7R7W0LRLJ1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -105,9 +91,7 @@
         <nav class="navigation">
           <ul class="navigation__list">
             <li class="navigation__item">
-              <a href="/#skills" class="navigation__link header__link"
-                >Skills</a
-              >
+              <a href="/#skills" class="navigation__link header__link">Skills</a>
             </li>
             <li class="navigation__item">
               <a href="/#work" class="navigation__link header__link">Work</a>
@@ -115,31 +99,12 @@
             <li class="navigation__item">
               <a href="/#about" class="navigation__link header__link">About</a>
             </li>
-            <!-- <li class="navigation__item">
-              <a
-                href="/web-development-blog"
-                class="navigation__link navigation__link--icon header__link"
-                target="_blank"
-                rel="noopener"
-                >Blog
-                <img
-                  src="./assets/images/icons/menu/external.svg"
-                  alt="Open"
-                  class="navigation__icon"
-              /></a>
-            </li> -->
           </ul>
-          <a
-            href="#contact"
-            class="header__button header__button--small header__link button"
-            >Contact</a
-          >
+          <a href="#contact" class="header__button header__button--small header__link button">Contact</a>
         </nav>
 
         <div class="header__item header__item--right">
-          <a href="#contact" class="header__button header__button--large button"
-            >Contact</a
-          >
+          <a href="#contact" class="header__button header__button--large button">Contact</a>
         </div>
       </div>
     </header>
@@ -147,17 +112,12 @@
     <div class="underlay"></div>
 
     <main class="background">
-      <section
-        class="introduction container"
-        data-aos="fade-up"
-        data-aos-duration="2000"
-      >
+      <section class="introduction container" data-aos="fade-up" data-aos-duration="2000">
         <article class="introduction__content">
           <h1 class="introduction__title">Oops</h1>
 
           <p class="introduction__content">
-            Something went wrong. Please use the navigation or any other method
-            to return to the website.
+            Something went wrong. Please use the navigation or any other method to return to the website.
           </p>
           <a href="/" class="button">Go Back</a>
         </article>
@@ -174,54 +134,30 @@
 
       <hr class="separator" />
 
-      <section
-        class="contact container section"
-        data-aos="fade-up"
-        data-aos-duration="2000"
-        data-aos-delay="500"
-      >
+      <section class="contact container section" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="500">
         <article>
           <h2 class="contact__title">Let's talk</h2>
 
           <p class="contact__text">
-            If you have an idea for a project or you just want to have a chat,
-            please feel free to get in touch with me to see how I can help.
+            If you have an idea for a project or you just want to have a chat, please feel free to get in touch with me
+            to see how I can help.
           </p>
 
           <p class="contact__text">
-            I'm always open to great new opportunities, so if you would like to
-            find about more about me in a professional capacity, please get in
-            touch via any of the methods on my website.
+            I'm always open to great new opportunities, so if you would like to find about more about me in a
+            professional capacity, please get in touch via any of the methods on my website.
           </p>
 
           <p class="contact__text">
             Alternatively, send me an email at
-            <a href="mailto:me@louisyoung.co.uk?subject=Website" class="link"
-              >me@louisyoung.co.uk</a
-            >.
+            <a href="mailto:me@louisyoung.co.uk?subject=Website" class="link">me@louisyoung.co.uk</a>.
           </p>
         </article>
 
         <form action="#!" class="form">
-          <input
-            type="text"
-            name="name"
-            placeholder="Name"
-            class="form__input"
-            required
-          />
-          <input
-            type="email"
-            name="email"
-            placeholder="Email"
-            class="form__input"
-            required
-          />
-          <textarea
-            name="enquiry"
-            class="form__input form__input--text"
-            placeholder="Enquiry"
-          ></textarea>
+          <input type="text" name="name" placeholder="Name" class="form__input" required />
+          <input type="email" name="email" placeholder="Email" class="form__input" required />
+          <textarea name="enquiry" class="form__input form__input--text" placeholder="Enquiry"></textarea>
 
           <button class="form__submit button" type="submit">Send</button>
         </form>
@@ -236,10 +172,7 @@
         >
 
         <nav class="socials">
-          <a
-            href="//github.com/louis-young"
-            target="_blank"
-            rel="noopener nofollow noreferrer"
+          <a href="//github.com/louis-young" target="_blank" rel="noopener nofollow noreferrer"
             ><img
               src="./assets/images/icons/socials/github.svg"
               alt="Github"
@@ -247,10 +180,7 @@
               class="socials__icon"
               loading="lazy"
           /></a>
-          <a
-            href="//linkedin.com/in/louis-r-young"
-            target="_blank"
-            rel="noopener nofollow noreferrer"
+          <a href="//linkedin.com/in/louis-r-young" target="_blank" rel="noopener nofollow noreferrer"
             ><img
               src="./assets/images/icons/socials/linkedin.svg"
               alt="LinkedIn"
@@ -263,26 +193,10 @@
     </footer>
 
     <aside class="switch">
-      <label
-        for="light"
-        class="switch__label switch__label--light switch__label--active"
-        >Light</label
-      >
-      <input
-        type="radio"
-        name="theme"
-        class="switch__input"
-        id="light"
-        data-theme="light"
-      />
+      <label for="light" class="switch__label switch__label--light switch__label--active">Light</label>
+      <input type="radio" name="theme" class="switch__input" id="light" data-theme="light" />
       <label for="dark" class="switch__label switch__label--dark">Dark</label>
-      <input
-        type="radio"
-        name="theme"
-        class="switch__input"
-        id="dark"
-        data-theme="dark"
-      />
+      <input type="radio" name="theme" class="switch__input" id="dark" data-theme="dark" />
     </aside>
 
     <section class="fallback">
@@ -294,45 +208,20 @@
           >
         </figure>
 
-        <p class="fallback__text">
-          You are currently using an outdated browser.
-        </p>
-        <p class="fallback__text">
-          Please consider using a modern browser such as one listed below:
-        </p>
+        <p class="fallback__text">You are currently using an outdated browser.</p>
+        <p class="fallback__text">Please consider using a modern browser such as one listed below:</p>
 
         <div class="browsers">
-          <a
-            href="//www.google.com/chrome/"
-            target="_blank"
-            rel="noopener"
-            class="browser"
-          >
-            <img
-              src="./assets/images/icons/browsers/chrome.svg"
-              alt="Google Chrome"
-            />
+          <a href="//www.google.com/chrome/" target="_blank" rel="noopener" class="browser">
+            <img src="./assets/images/icons/browsers/chrome.svg" alt="Google Chrome" />
             <p class="browser__title">Google Chrome</p>
           </a>
-          <a
-            href="//www.opera.com/download"
-            target="_blank"
-            rel="noopener"
-            class="browser"
-          >
+          <a href="//www.opera.com/download" target="_blank" rel="noopener" class="browser">
             <img src="./assets/images/icons/browsers/opera.svg" alt="Opera" />
             <p class="browser__title">Opera</p>
           </a>
-          <a
-            href="//www.mozilla.org/en-GB/firefox/new/"
-            target="_blank"
-            rel="noopener"
-            class="browser"
-          >
-            <img
-              src="./assets/images/icons/browsers/firefox.svg"
-              alt="Mozilla Firefox"
-            />
+          <a href="//www.mozilla.org/en-GB/firefox/new/" target="_blank" rel="noopener" class="browser">
+            <img src="./assets/images/icons/browsers/firefox.svg" alt="Mozilla Firefox" />
             <p class="browser__title">Mozilla Firefox</p>
           </a>
         </div>
