--- a/public/src/index.html
+++ b/public/src/index.html
@@ -185,6 +185,23 @@
       <section class="projects section container" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="100">
         <figure class="project">
           <a
+            href="//app.louisyoung.co.uk/github-activity-visualiser"
+            class="project__link"
+            target="_blank"
+            rel="noopener nofollow noreferrer"
+          >
+            <img
+              loading="lazy"
+              src="./assets/images/projects/github-activity-visualiser.jpg"
+              alt="GitHub React Application"
+              title="GitHub React Application"
+              class="project__preview"
+            />
+          </a>
+        </figure>
+
+        <figure class="project">
+          <a
             href="//app.louisyoung.co.uk/keyword-density-tool"
             class="project__link"
             target="_blank"
@@ -195,23 +212,6 @@
               src="./assets/images/projects/keyword-density-tool.jpg"
               alt="Keyword Density Analyser Application"
               title="Keyword Density Tool React Application"
-              class="project__preview"
-            />
-          </a>
-        </figure>
-
-        <figure class="project">
-          <a
-            href="//app.louisyoung.co.uk/task-manager"
-            class="project__link"
-            target="_blank"
-            rel="noopener nofollow noreferrer"
-          >
-            <img
-              loading="lazy"
-              src="./assets/images/projects/task-manager.jpg"
-              alt="Task Manager React Application"
-              title="Task Manager React Application"
               class="project__preview"
             />
           </a>
@@ -277,26 +277,15 @@
 
           <p class="content__text">Technologies I'm comfortable working with include but are not limited to:</p>
           <ul class="pills">
-            <li class="pill">HTML</li>
-            <li class="pill">CSS</li>
-            <li class="pill">Sass</li>
-            <li class="pill">BEM</li>
-            <li class="pill">JavaScript</li>
+            <li class="pill">HTML5</li>
+            <li class="pill">CSS3</li>
+            <li class="pill">SASS (BEM)</li>
+            <li class="pill">JavaScript (ES6+)</li>
             <li class="pill">React</li>
-            <li class="pill">Next</li>
-            <li class="pill">Node</li>
-            <li class="pill">Express</li>
-            <li class="pill">MongoDB</li>
-            <li class="pill">PHP</li>
-            <li class="pill">MySQL</li>
-            <li class="pill">Docker</li>
-            <li class="pill">JSON</li>
-            <li class="pill">Schema</li>
-            <li class="pill">NPM</li>
-            <li class="pill">Git</li>
-            <li class="pill">Gulp</li>
-            <li class="pill">Webpack</li>
             <li class="pill">CMSs</li>
+            <li class="pill">NPM</li>
+            <li class="pill">Webpack</li>
+            <li class="pill">Git</li>
           </ul>
           <p class="content__text">and I have the ability to quickly learn others.</p>
         </article>
@@ -326,26 +315,19 @@
             within different teams with knowledge of:
           </p>
           <ul class="pills">
-            <li class="pill">Windows</li>
-            <li class="pill">Linux</li>
-            <li class="pill">FTP</li>
-            <li class="pill">SSH</li>
-            <li class="pill">Servers</li>
+            <li class="pill">APIs</li>
+            <li class="pill">Optimisation</li>
+            <li class="pill">Caching</li>
+            <li class="pill">Deployment</li>
+            <li class="pill">CI / CD</li>
             <li class="pill">Hosting</li>
             <li class="pill">Domains</li>
             <li class="pill">Databases</li>
             <li class="pill">DNS</li>
-            <li class="pill">Caching</li>
-            <li class="pill">Deployment</li>
-            <li class="pill">CI / CD</li>
-            <li class="pill">APIs</li>
-            <li class="pill">CDNs</li>
-            <li class="pill">Optimisation</li>
+            <li class="pill">FTP</li>
             <li class="pill">SSLs</li>
-            <li class="pill">VPSs</li>
-            <li class="pill">UI / UX</li>
             <li class="pill">Technical SEO</li>
-            <li class="pill">Analytics</li>
+            <li class="pill">UI / UX</li>
             <li class="pill">Documentation</li>
           </ul>
 
