--- a/public/src/index.html
+++ b/public/src/index.html
@@ -23,7 +23,7 @@
     />
     <meta
       property="og:image"
-      content="https://www.louisyoung.co.uk/assets/images/illustrations/full-stack-web-developer.svg"
+      content="https://www.louisyoung.co.uk/assets/images/illustrations/front-end-web-developer.svg"
     />
     <meta name="twitter:site" content="https://www.louisyoung.co.uk" />
     <meta name="twitter:title" content="Louis Young - Web Developer" />
@@ -34,7 +34,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://www.louisyoung.co.uk/assets/images/illustrations/full-stack-web-developer.svg"
+      content="https://www.louisyoung.co.uk/assets/images/illustrations/front-end-web-developer.svg"
     />
     <!-- SEO end. -->
     <!-- Favicon start. -->
@@ -117,7 +117,7 @@
           <h1 class="introduction__title">Web Developer</h1>
 
           <p class="introduction__content">
-            I'm currently creating fast, responsive, accessible and secure websites and applications at
+            I'm currently creating fast, responsive, accessible and secure websites at
             <a href="//fluidstudiosltd.com" target="_blank" rel="noopener nofollow noreferrer" class="link"
               >Fluid Studios</a
             >
@@ -127,9 +127,9 @@
         </article>
 
         <img
-          src="./assets/images/illustrations/full-stack-web-developer.svg"
-          alt="Full Stack Web Developer"
-          title="Full Stack Web Developer"
+          src="./assets/images/illustrations/front-end-web-developer.svg"
+          alt="Front-end Web Developer"
+          title="Front-end Stack Web Developer"
           class="introduction__illustration"
         />
       </section>
@@ -219,6 +219,23 @@
 
         <figure class="project">
           <a
+            href="//app.louisyoung.co.uk/shortener"
+            class="project__link"
+            target="_blank"
+            rel="noopener nofollow noreferrer"
+          >
+            <img
+              loading="lazy"
+              src="./assets/images/projects/url-shortener.jpg"
+              alt="Full-stack React Application"
+              title="Full-stack React Application"
+              class="project__preview"
+            />
+          </a>
+        </figure>
+
+        <figure class="project">
+          <a
             href="//staging.fluidstudiosltd.com"
             class="project__link"
             target="_blank"
@@ -229,23 +246,6 @@
               src="./assets/images/projects/fluid-studios.jpg"
               alt="Full-stack Web Development Project"
               title="Full-stack Web Development Project"
-              class="project__preview"
-            />
-          </a>
-        </figure>
-
-        <figure class="project">
-          <a
-            href="//app.louisyoung.co.uk/word-counter"
-            class="project__link"
-            target="_blank"
-            rel="noopener nofollow noreferrer"
-          >
-            <img
-              loading="lazy"
-              src="./assets/images/projects/word-counter.jpg"
-              alt="Word Counter React Application"
-              title="Word Counter React Application"
               class="project__preview"
             />
           </a>
@@ -277,15 +277,14 @@
 
           <p class="content__text">Technologies I'm comfortable working with include but are not limited to:</p>
           <ul class="pills">
+            <li class="pill">JavaScript (ES6+)</li>
+            <li class="pill">React</li>
             <li class="pill">HTML5</li>
             <li class="pill">CSS3</li>
             <li class="pill">SASS (BEM)</li>
-            <li class="pill">JavaScript (ES6+)</li>
-            <li class="pill">React</li>
-            <li class="pill">CMSs</li>
-            <li class="pill">NPM</li>
             <li class="pill">Webpack</li>
             <li class="pill">Git</li>
+            <li class="pill">CMSs</li>
           </ul>
           <p class="content__text">and I have the ability to quickly learn others.</p>
         </article>
@@ -316,14 +315,15 @@
           </p>
           <ul class="pills">
             <li class="pill">APIs</li>
+            <li class="pill">Deployment</li>
+            <li class="pill">Servers</li>
             <li class="pill">Optimisation</li>
             <li class="pill">Caching</li>
-            <li class="pill">Deployment</li>
-            <li class="pill">CI / CD</li>
+            <li class="pill">Databases</li>
             <li class="pill">Hosting</li>
             <li class="pill">Domains</li>
-            <li class="pill">Databases</li>
             <li class="pill">DNS</li>
+            <li class="pill">CI / CD</li>
             <li class="pill">FTP</li>
             <li class="pill">SSLs</li>
             <li class="pill">Technical SEO</li>
