Update dependencies and projects

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -185,6 +185,40 @@
       <section class="projects section container" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="100">
         <figure class="project">
           <a
+            href="//app.louisyoung.co.uk/tracker"
+            class="project__link"
+            target="_blank"
+            rel="noopener nofollow noreferrer"
+          >
+            <img
+              loading="lazy"
+              src="./assets/images/projects/tracker.jpg"
+              alt="Full-stack React Application"
+              title="Full-stack React Application"
+              class="project__preview"
+            />
+          </a>
+        </figure>
+
+        <figure class="project">
+          <a
+            href="//app.louisyoung.co.uk/github-dashboard"
+            class="project__link"
+            target="_blank"
+            rel="noopener nofollow noreferrer"
+          >
+            <img
+              loading="lazy"
+              src="./assets/images/projects/github-dashboard.jpg"
+              alt="GitHub Dashboard React Application"
+              title="GitHub Dashboard React Application"
+              class="project__preview"
+            />
+          </a>
+        </figure>
+
+        <figure class="project">
+          <a
             href="//app.louisyoung.co.uk/github-activity-visualiser"
             class="project__link"
             target="_blank"
@@ -195,40 +229,6 @@
               src="./assets/images/projects/github-activity-visualiser.jpg"
               alt="GitHub React Application"
               title="GitHub React Application"
-              class="project__preview"
-            />
-          </a>
-        </figure>
-
-        <figure class="project">
-          <a
-            href="//app.louisyoung.co.uk/keyword-density-tool"
-            class="project__link"
-            target="_blank"
-            rel="noopener nofollow noreferrer"
-          >
-            <img
-              loading="lazy"
-              src="./assets/images/projects/keyword-density-tool.jpg"
-              alt="Keyword Density Analyser Application"
-              title="Keyword Density Tool React Application"
-              class="project__preview"
-            />
-          </a>
-        </figure>
-
-        <figure class="project">
-          <a
-            href="//app.louisyoung.co.uk/shortener"
-            class="project__link"
-            target="_blank"
-            rel="noopener nofollow noreferrer"
-          >
-            <img
-              loading="lazy"
-              src="./assets/images/projects/url-shortener.jpg"
-              alt="Full-stack React Application"
-              title="Full-stack React Application"
               class="project__preview"
             />
           </a>
