--- a/public/src/errors/error.html
+++ b/public/src/errors/error.html
@@ -99,6 +99,15 @@
             <li class="navigation__item">
               <a href="/#about" class="navigation__link header__link">About</a>
             </li>
+            <li class="navigation__item">
+              <a
+                href="https://blog.louisyoung.co.uk/"
+                class="navigation__link navigation__link--icon header__link"
+                target="_blank"
+                rel="noopener"
+                >Blog <img src="./assets/images/icons/menu/external.svg" alt="Open" class="navigation__icon"
+              /></a>
+            </li>
           </ul>
           <a href="#contact" class="header__button header__button--small header__link button">Contact</a>
         </nav>
